# unit-test-catch2

./: .clang-format  .gitignore  CMakeLists.txt  README.md
scripts/: run-tests.sh
src/: CMakeLists.txt  main.cpp
src/weapons/: CMakeLists.txt  G36.cpp  G36.h  SCAR5.cpp  SCAR5.h
tests/: CMakeLists.txt  G36_Test.cpp  SCAR5_Test.cpp
